<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Onboarding.n2"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/ima"
        android:layout_width="wrap_content"
        android:layout_height="277dp"
        android:layout_gravity="center"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="1dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img2" />
    <TextView
        android:id="@+id/textTitle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/titulo2"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp" />
    <TextView
        android:id="@+id/textlar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/manejo2"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp" />
    <TextView
        android:id="@+id/gest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/estion"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp" />
    <LinearLayout
        android:id="@+id/layoutNext"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <Button
            android:id="@+id/skip2"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:background="@drawable/stylesnt"
            android:text="@string/skip"
            android:textColor="@color/colorWhite">
        </Button>
        <TextView
            android:id="@+id/textInc2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="sans-serif"
            android:gravity="bottom|end"
            android:text="@string/done"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>